--- a/part_0/0.4_new_note.md
+++ b/part_0/0.4_new_note.md
@@ -1,3 +1,4 @@
+```mermaid
 sequenceDiagram
     participant user
     participant browser
@@ -6,10 +7,10 @@ sequenceDiagram
     user->>browser: Writes a new note and clicks Save
     browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
     activate server
-    server-->>browser: 201 Created
+    server-->>browser: 302 Found (Location: /exampleapp/notes)
     deactivate server
 
-    Note right of browser: The browser sends a GET request to retrieve the updated list of notes
+    Note right of browser: The browser redirects to the /exampleapp/notes page
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
     activate server
@@ -30,7 +31,7 @@ sequenceDiagram
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
     activate server
-    server-->>browser: [{ "content": "HTML is easy", "date": "2023-1-1" }, ... ]
+    server-->>browser: JSON data (e.g., [{ "content": "HTML is easy", "date": "2023-1-1" }, ... ])
     deactivate server
 
     Note right of browser: The browser executes the callback function that renders the notes
