--- a/part_0/0.5_single_page.md
+++ b/part_0/0.5_single_page.md
@@ -24,7 +24,7 @@ sequenceDiagram
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
     activate server
-    server-->>browser: JSON data (e.g., [{ "content": "Full Stack Open", "date": "2024-06-09" }, ... ])
+    server-->>browser: JSON data (e.g., [{ "content": "HTML is easy", "date": "2023-1-1" }, ... ])
     deactivate server
 
     Note right of browser: The browser executes the callback function that renders the notes
