--- a/part_0/0.5_single_page.md
+++ b/part_0/0.5_single_page.md
@@ -7,27 +7,25 @@ sequenceDiagram
     user->>browser: Navigates to https://studies.cs.helsinki.fi/exampleapp/spa
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa
     activate server
-    server-->>browser: HTML document
+    server-->>browser: HTML document (status 200 OK)
     deactivate server
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
     activate server
-    server-->>browser: the css file
+    server-->>browser: CSS file (status 200 OK)
     deactivate server
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa.js
     activate server
-    server-->>browser: the JavaScript file
+    server-->>browser: JavaScript file (status 200 OK)
     deactivate server
-
-    Note right of browser: The browser starts executing the JavaScript code for the SPA
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
     activate server
-    server-->>browser: JSON data (e.g., [{ "content": "Full Stack Open", "date": "2024-06-09" }, ... ])
+    server-->>browser: JSON data (status 200 OK)
     deactivate server
 
-    Note right of browser: The browser executes the callback function that renders the notes
+    Note right of browser: The browser starts executing the JavaScript code for the SPA and renders the notes
 
     user->>browser: Writes a new note and clicks Save
     browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note_spa
